# permyt-demos

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  WORKSHOP.md  update
bank/: .env.example  CLAUDE.md  (+4 more)
government/: .env.example  CLAUDE.md  README.md  conftest.py  pyproject.toml
government/app/: managers.py  serializers.py  urls.py
government/app/common/pages/: urls.py  views.py
government/app/common/pages/static/css/: connector.scss  style.scss
government/app/common/pages/static/js/: dashboard.js  main.js  register.js  stakeholders.js  tabs.js
government/app/common/unittests/migrations/: 0001_initial.py
government/app/core/: tasks.py
government/app/core/logs/: models.py  serializers.py  tests.py
government/app/core/logs/migrations/: 0001_initial.py
government/app/core/requests/: client.py  factories.py  urls.py  views.py
government/app/core/requests/scopes/: catalogue.py  serializers.py  utils.py
government/app/core/requests/tests/: test_client_contract.py  test_scopes.py
government/app/core/users/: admin.py  factories.py  models.py  serializers.py  test_profile.py  tests.py  views.py
government/app/core/users/migrations/: 0002_user_profile_type_alter_logintoken_session_and_more.py  0003_logintoken_profile_type_user_citizen_card_number_and_more.py  0004_logintoken_error.py  0005_user_driving_licence_categories_and_more.py
government/app/mixins/: models.py
government/app/utils/: permissions.py  tests.py  websocket.py
government/config/: app.conf  beat.conf  nginx.conf  tasks.conf  update
government/settings/: base.py
(+440 files in other folders)
