[project]
name = "permyt-demo-government"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "permyt==0.1.6",
    "joserfc>=1.0.0",
    "celery[redis]==5.6.3",
    "channels[daphne]==4.3.2",
    "channels-redis==4.3.0",
    "Django==6.0.4",
    "django-axes==8.3.1",
    "django-celery-beat==2.9.0",
    "django-compressor==4.6.0",
    "django-cors-headers==4.9.0",
    "django-libsass==0.9",
    "djangorestframework==3.17.1",
    "django-redis==6.0.0",
    "django-secured-fields==0.4.4",
    "Faker==40.15.0",
    "ipython==9.12.0",
    "psycopg[binary]==3.3.3",
    "pytz==2026.1",
    "qrcode==8.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "bandit==1.9.4",
    "coverage==7.13.5",
    "django-extensions==4.1",
    "django-debug-toolbar==6.3.0",
    "django-debug-toolbar-template-timings==0.9",
    "jupyter==1.1.1",
    "pip-upgrader==2.4.4",
    "pylint==4.0.5",
    "pylint-django==2.7.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-factoryboy==2.8.1",
    "pytest-instafail==0.5.0",
    "pytest-pylint==0.21.0",
    "pytest-sugar==1.1.1",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "vulture==2.16",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
